--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -290,8 +290,8 @@
                                 placement="bottom" 
                                 ngbPopover="Cannot book your Rental !"
                                 triggers="mouseenter:mouseleave"
-                                #p="ngbPopover" 
-                                (click)="p.open()">Go to booking</button>
+                                #pop="ngbPopover" 
+                                (click)="pop.open()">Go to booking</button>
 
                     </div>
                 </div>
