--- a/src/assets/sass/paper-kit.scss
+++ b/src/assets/sass/paper-kit.scss
@@ -46,6 +46,9 @@
 @import "paper-kit/headers";
 @import "paper-kit/footers";
 
+// Tables
+@import "paper-kit/tables";
+
 // FileUpload
 @import "paper-kit/fileupload.scss";
 
