--- a/src/app/common/bottom-navbar/bottom-navbar.component.html
+++ b/src/app/common/bottom-navbar/bottom-navbar.component.html
@@ -6,7 +6,7 @@
                 class="btn btn-fill disabled" 
                 ngbPopover="Cannot book your Rental !"
                 triggers="mouseenter:mouseleave"
-                #p="ngbPopover" 
-                (click)="p.open()">Go to booking</button>
+                #pop="ngbPopover" 
+                (click)="pop.open()">Go to booking</button>
     </div>
 </nav>
