cleanup img directory

--- a/src/app/rental/rental-incoming/rental-incoming-list/dialog/rental-incoming-select-place-dialog.html
+++ b/src/app/rental/rental-incoming/rental-incoming-list/dialog/rental-incoming-select-place-dialog.html
@@ -50,7 +50,7 @@
           <p>生徒の希望日時でスタジオ予約ができない場合、振替日時を提案できます。</p>
         </div>
         <div class="space-top"></div>
-        <textarea class="form-control" placeholder="任意でメッセージで添えることができます..." rows="3" ></textarea>
+        <textarea class="form-control" placeholder="任意で生徒にメッセージを伝えられます..." rows="3" ></textarea>
         <div class="space-top"></div>
         <p><button class="btn btn-primary" (click)="onBookingReady()">予約を確定する</button></p>
         <p><button class="btn btn-warning" (click)="onReProposal()" >振替日時を提案</button></p>
