small update from lesson-reporter

--- a/src/assets/sass/paper-kit/_bootstrap-switch.scss
+++ b/src/assets/sass/paper-kit/_bootstrap-switch.scss
@@ -218,7 +218,8 @@
 }
 
 .bootstrap-switch.bootstrap-switch-on .bootstrap-switch-handle-off {
-  background-color: #66615B;
+  // background-color: #66615B;
+  background-color: #cfcfca; // Edited by Hamada
 }
 
 .bootstrap-switch.bootstrap-switch-off .bootstrap-switch-handle-on {
