--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -72,7 +72,7 @@
                                             </div>
                                     </div>
                                     <div class="form-group">
-                                        <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                                        <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
                                             <div class="input-group-prepend">
                                                 <span class="input-group-text">
                                                     <i class="nc-icon nc-email-85"></i>
