--- a/src/app/static-page/home/home.component.html
+++ b/src/app/static-page/home/home.component.html
@@ -186,7 +186,7 @@
                                 
                                 <!-- <label>Email</label> -->
                                 <div class="form-group">
-                                    <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus===true}">
+                                    <div class="input-group form-group-no-border" [ngClass]="{'input-group-focus':focus1===true}">
                                         <div class="input-group-prepend">
                                             <span class="input-group-text">
                                                 <i class="nc-icon nc-email-85"></i>
