--- a/src/assets/sass/paper-kit/_buttons.scss
+++ b/src/assets/sass/paper-kit/_buttons.scss
@@ -193,6 +193,7 @@
 .btn.btn-link:focus{
     box-shadow: none !important;
     text-decoration: none;
+    background-color: transparent !important; // Added by Hamada
 }
 
 .column .btn-link{
