--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -112,7 +112,7 @@
                     <hr />
                     <div class="copyright">
                         <div class="pull-left">
-                            © Anytime Personal Trainer.Inc
+                            © Aeru.me, Inc
                         </div>
                         <div class="links pull-right">
                             <ul>
