--- a/src/app/static-page/presentation/presentation.component.html
+++ b/src/app/static-page/presentation/presentation.component.html
@@ -13,7 +13,7 @@
 			</div>
 		</div>
 		<h6 class="category category-absolute">
-			&copy;{{footer | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Aeru.me.Inc
+			&copy;{{footer | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Aeru.me, Inc
 		</h6>
 	</div>
 
