--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -118,7 +118,7 @@
                             <ul>
                                 <li>
                                     <a routerLink="/aboutus">
-                                        Company Policy
+                                        Company Info
                                     </a>
                                 </li>
                                 |
