--- a/src/app/static-page/aboutus/aboutus.component.html
+++ b/src/app/static-page/aboutus/aboutus.component.html
@@ -34,10 +34,11 @@
                             <div class="description">
                                 <h4 class="info-title">CEO 浜田 篤</h4>
                                 <p>東京理科大学理工学部卒</p>
-                                <p>本田技研工業入社後Apple CarplayやGoogle Android Autoの研究開発の為シリコンバレーに駐在。文化の違いに衝撃を受ける。</p>
-                                <p>帰国後、教育ITベンチャーに転職し、大企業とベンチャーの違いやITアウトソーシングのノウハウを蓄え独立。</p>
-                                <p>教育ベンチャー時代の後輩がインド人で、それをきっかけにインドを中心とした開発アウトソーシングで受託開発を行うようになる。</p>
-                                <p>ITに関する豊富な知見を活かし、スタートアップから上場企業まで幅広く技術顧問をしながら、Aeru.meのシステムを開発。</p>
+                                <p>本田技研工業入社後、車のセンサー周りの研究開発を行った後、Apple, Googleとの共同研究の為シリコンバレーに駐在。文化の違いに衝撃を受ける。</p>
+                                <p>帰国後、教育ITベンチャーに転職しCTOとしての実務経験を詰み、大企業とベンチャーの違いやITアウトソーシングのノウハウを蓄えた後、独立。</p>
+                                <p>独立後はスタートアップ企業で培ったシステムのアウトソーシング（外注）ノウハウを活かしてインドの開発パートナーとアライアンスを結び、中小企業のコーポレートページなどの受託開発を中心に行うようになる。</p>
+                                <p>受託ならではの利益率の低さに頭を抱えていたところ、様々な中小企業経営者の方々と接する過程で、エンジニアのマネジメントや評価、組織設計、ITシステムの事業計画の作り方、といったノウハウに需要があると気づき、経営者、経営陣向けにITコンサルティングを行うようになる。</p>
+                                <p>その後はITコンサルで得られる収益と隙間時間全てを投入し、約一年の時を経てAeru.me基盤システムを開発。</p>
                                 <p>法人化＆サービスローンチに至る。</p>
                             </div>
                         </div>
@@ -51,8 +52,8 @@
                             </div> -->
                             <div class="description">
                                 <h4 class="info-title">India team</h4>
-                                <p>インドのパートナーを中心に開発のアウトソーシングを行なっています。</p>
-                                <p>他にもルーマニアやインドネシアのデザインパートナー、スロバキアの技術エキスパートといった強力なパートナーが居ることにより、商品力のあるサービス開発が可能になっています。</p>
+                                <p>Aeru.meプラットフォームはインドの開発パートナーを中心にサービス開発を行なっています。</p>
+                                <p>他にもルーマニアやインドネシアのデザインパートナー、スロバキアの技術顧問（CTO）といった強力なパートナーの協力を得ることで、商品力のあるサービス提供が可能になっています。</p>
                             </div>
                         </div>
                     </div>
