--- a/src/app/static-page/presentation/presentation.component.scss
+++ b/src/app/static-page/presentation/presentation.component.scss
@@ -1,3 +1,15 @@
+.logo-rentaldetails{
+    z-index: 3;
+    position: relative;
+    max-width: 300px;
+    margin: 20px auto -20px;
+    padding: 40px;
+  
+    img{
+        width: 100%;
+    }
+  }
+
 .components-container,
 .section-examples{
     .details-text{
