--- a/src/app/static-page/presentation/presentation.component.html
+++ b/src/app/static-page/presentation/presentation.component.html
@@ -1,49 +1,26 @@
 <div class="wrapper">
-    <div class="page-header section-dark" style="background-image: url('./assets/img/uriel-soberanes.jpg')">
-		<div class="content-center">
-			<div class="container">
-				<div class="title-brand">
-                    <div class="angular-logo">
-                        <img src="./assets/img/icons/angular2-logo.png" alt="">
-                    </div>
-					<h1 class="presentation-title">Aeru.me</h1>
+	<div class="page-header page-header-small" data-parallax="true" style="background-image: url('./assets/img/top-banner.jpg');">
+		<div class="filter"></div>
+		<div class="container">
+				<div class="space-70"></div>
+				<div class="logo-rentaldetails">
+						<img src="assets/img/logo/aeru-me-logo.png" alt="">
 				</div>
-
-				<h2 class="presentation-subtitle text-center">あらゆる人・モノ・サービス予約をこれ一つで </h2>
-			</div>
+				<div class="motto text-center">
+						<h4>あらゆる予約サービスを自社ブランドで展開できます</h4>
+				</div>
 		</div>
-		<h6 class="category category-absolute">
-			&copy;{{footer | date: 'yyyy'}}, made with <i class="fa fa-heart heart"></i> Aeru.me, Inc
-		</h6>
+		<div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
 	</div>
 
 	<div class="section section-dark section-summary">
 		<div class="container">
 			<div class="row">
 				<div class="col-md-9 ml-auto mr-auto text-center">
-					<h2 class="title">最短４クリックで予約完了</h2>
+					<h2 class="title">わずか４クリックで予約が完了</h2>
 					<p class="description">
-						従来の予約サービスを圧倒するUIとUXで、来訪者を予約完了まで導きます。
+						従来の予約サービスを圧倒するUXで、来訪者を予約完了へ導きます。
 					</p>
-				</div>
-			</div>
-		</div>
-	</div>
-
-	<div class="section section-cards section-gold">
-		<div class="codrops-header">
-			<div class="row">
-				<div class="col-md-5 col-lg-4">
-					<div class="section-description">
-						<h3 class="title">綺麗でシンプルなUI</h3>
-						<h6 class="category">必要に満ちたシンプルなデザイン</h6>
-						<h5 class="description">必要な機能をできる限りシンプルに、できる限り少ないクリック数で目的を達成できるよう設計することで、来訪者がCV（コンバージョン）しやすいサービスになっています。これによりユーザーの途中離脱による機会損失を最小限に留めます。</h5>
-					</div>
-				</div>
-				<div class="col-md-7 col-lg-8">
-					<div class="image-container">
-						<img src="./assets/img/carduri2.png" alt="Cards">
-					</div>
 				</div>
 			</div>
 		</div>
@@ -136,6 +113,25 @@
 						</div>
 					</div>
 
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<div class="section section-cards section-gold">
+		<div class="codrops-header">
+			<div class="row">
+				<div class="col-md-5 col-lg-4">
+					<div class="section-description">
+						<h3 class="title">綺麗でシンプルなUI</h3>
+						<h6 class="category">必要に満ちたシンプルなデザイン</h6>
+						<h5 class="description">必要な機能をできる限りシンプルに、できる限り少ないクリック数で目的を達成できるよう設計することで、来訪者がCV（コンバージョン）しやすいサービスになっています。これによりユーザーの途中離脱による機会損失を最小限に留めます。</h5>
+					</div>
+				</div>
+				<div class="col-md-7 col-lg-8">
+					<div class="image-container">
+						<img src="./assets/img/carduri2.png" alt="Cards">
+					</div>
 				</div>
 			</div>
 		</div>
