--- a/src/app/static-page/presentation/presentation.component.html
+++ b/src/app/static-page/presentation/presentation.component.html
@@ -1,5 +1,5 @@
 <div class="wrapper">
-	<div class="page-header page-header-small" data-parallax="true" style="background-image: url('./assets/img/top-banner.jpg');">
+	<div class="page-header page-header-small" data-parallax="true" style="background-image: url('./assets/img/bg/video_home_preview.jpg');">
 		<div class="filter"></div>
 		<div class="container">
 				<div class="space-70"></div>
@@ -9,8 +9,9 @@
 				<div class="motto text-center">
 						<h4>あらゆる予約サービスを自社ブランドで展開できます</h4>
 				</div>
+				<div class="space-70"></div>
 		</div>
-		<div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div>
+		<!-- <div class="moving-clouds" style="background-image: url('assets/img/clouds.png'); "></div> -->
 	</div>
 
 	<div class="section section-dark section-summary">
