modified layout in presentation page

--- a/src/assets/sass/paper-kit/_headers.scss
+++ b/src/assets/sass/paper-kit/_headers.scss
@@ -17,6 +17,9 @@
         height: 100%;
         z-index: -1;
     }
+    &.page-header-midium{
+        min-height: 80vh !important;
+    }
     &.page-header-small{
         min-height: 65vh !important;
         max-height: 700px;
