--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -305,7 +305,7 @@
                     <div class="col-md-8 ml-auto mr-auto text-center">
                         <h2 class="title">Let's book</h2>
                         <p class="description">
-                            こちらからベンダーサイトへジャンプできます。
+                            こちらの入力フォームからベンダーに直接お問い合わせできます。
                         </p>
                         <br>
                         <a *ngIf="!isYourRental()" routerLink="booking" class="btn btn-danger btn-round btn-lg">Go to booking</a>
