--- a/src/app/static-page/aboutus/aboutus.component.html
+++ b/src/app/static-page/aboutus/aboutus.component.html
@@ -12,7 +12,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
-                        <h2 class="title">Team Members</h2>
+                        <h2 class="title">About us</h2>
                         <h5 class="description">ウェディングに関わるすべての人をハッピーに</h5>
                     </div>
                 </div>
