--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -308,14 +308,15 @@
                             こちらの入力フォームからベンダーに直接お問い合わせできます。
                         </p>
                         <br>
-                        <a *ngIf="!isYourRental()" routerLink="booking" class="btn btn-danger btn-round btn-lg">Go to booking</a>
+                        <!-- <a *ngIf="!isYourRental()" routerLink="booking" class="btn btn-danger btn-round btn-lg">Go to booking</a>
                         <button *ngIf="isYourRental()" 
                                 class="btn btn-round btn-lg disabled" 
                                 placement="bottom" 
                                 ngbPopover="Cannot book your Rental !"
                                 triggers="mouseenter:mouseleave"
                                 #pop="ngbPopover" 
-                                (click)="pop.open()">Go to booking</button>
+                                (click)="pop.open()">Go to booking</button> -->
+                        <app-form></app-form>
 
                     </div>
                 </div>
