--- a/src/app/rental/rental-detail/rental-detail.component.html
+++ b/src/app/rental/rental-detail/rental-detail.component.html
@@ -303,7 +303,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 ml-auto mr-auto text-center">
-                        <h2 class="title">Let's book</h2>
+                        <h2 class="title">Let's contact</h2>
                         <p class="description">
                             こちらの入力フォームからベンダーに直接お問い合わせできます。
                         </p>
