--- a/src/app/common/components/form/form.component.html
+++ b/src/app/common/components/form/form.component.html
@@ -11,7 +11,7 @@
                       name="username"
                       id="username"
                       class="form-control" 
-                      placeholder="Name" 
+                      placeholder="お名前" 
                       (focus)="focus=true" 
                       (blur)="focus=false"
                       required >
